# artemis

./: .env.production  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  MULTI_STRATEGY_APPROACH.md  SPACE_CLEANUP.md
crates/strategies/aave-flash-liquidation/: .env.example  Cargo.toml  README.md
crates/strategies/aave-flash-liquidation/src/: bindings.rs  collector.rs  executor.rs  lib.rs  strategy.rs  types.rs
crates/strategies/multi-strategy/: .env.example  Cargo.toml  DEPLOYMENT.md  README.md  config.json
crates/strategies/multi-strategy-flash/: Cargo.toml  DEPLOYMENT.md  README.md
crates/strategies/multi-strategy-flash/contracts/: .env.example  DEPLOY.md  POLYGON_INTEGRATION.md  PRODUCTION_OPTIMIZATIONS.md  foundry.toml  remappings.txt  verify_constructor_args.txt
crates/strategies/multi-strategy-flash/contracts/script/: Deploy.s.sol  DeployBalancerUltraAggressive.s.sol  DeployPolygon.s.sol  DeployPolygonBalancer.s.sol  DeployPolygonOptimized.s.sol  DeploySimple.s.sol
crates/strategies/multi-strategy-flash/contracts/src/: FlashArbExecutor.sol  FlashLoanCore.sol  JITLiquidityProvider.sol  PolygonFlashArbExecutor.sol  PolygonJITLiquidityProvider.sol
crates/strategies/multi-strategy-flash/contracts/src/interfaces/: IDexInterfaces.sol  PolygonDexInterfaces.sol
crates/strategies/multi-strategy-flash/src/: lib.rs  strategy.rs  types.rs
crates/strategies/multi-strategy-flash/src/abi/: ICurvePool.json  ICurveRegistry.json  IUniswapV2Pair.json  IUniswapV3Factory.json
crates/strategies/multi-strategy/bindings/: Cargo.toml
crates/strategies/multi-strategy/bindings/src/: lib.rs
crates/strategies/multi-strategy/contracts/: foundry.toml
crates/strategies/multi-strategy/contracts/script/: Deploy.s.sol
crates/strategies/multi-strategy/contracts/src/: FlashArbExecutor.sol  FlashLoanCore.sol  JITLiquidityProvider.sol  deploy.js
crates/strategies/multi-strategy/resources/: config.json
crates/strategies/multi-strategy/scripts/: simulate.rs
crates/strategies/multi-strategy/src/: lib.rs  strategy.rs  tests.rs  types.rs
examples/multi-strategy-bot/: Cargo.toml
examples/multi-strategy-bot/src/: main.rs
examples/multi-strategy-flash/: .env.example  Cargo.toml  config.json
examples/multi-strategy-flash/src/: main.rs
polygon-jit-strategy/: .env.example  .env.production  .env.simulation  Cargo.toml  deploy-to-hetzner.sh  run-with-monitor.sh  simple-production.sh  simple-run.sh  start-jit-strategy.sh  start-simulation.sh
polygon-jit-strategy/polygon-jit-strategy/: .env.production  README.md  dashboard.html  start-production.sh
polygon-jit-strategy/polygon-jit-strategy/src/: constants.rs  main.rs  monitor.rs  strategy.rs
polygon-jit-strategy/scripts/: run-with-monitor.sh
polygon-jit-strategy/src/: main.rs  monitor.rs  strategy.rs
polygon-jit-strategy/src/abis/: mod.rs
