[package]
name = "polygon-jit-strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ws", "rustls"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.3", features = ["derive"] }
lazy_static = "1.4.0"
prometheus = "0.14.0"
warp = "0.3.7"
tokio-stream = "0.1.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
