[package]
name = "multi-strategy-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
artemis-core = { path = "../../crates/artemis-core" }
clap = { version = "4.2", features = ["derive", "env"] }
dotenv = "0.15"
ethers = { workspace = true }
eyre = "0.6"
futures = "0.3"
multi-strategy = { path = "../../crates/strategies/multi-strategy" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mev-share = { version = "0.1.4" }
mev-share-sse = { version = "0.1.4" }
mev-share-rpc-api = { version = "0.1.4" }