[package]
name = "multi-strategy-flash-example"
version = "0.1.0"
edition = "2021"

[dependencies]
artemis-core = { path = "../../crates/artemis-core" }
multi-strategy-flash = { path = "../../crates/strategies/multi-strategy-flash" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
clap = { version = "4.1", features = ["derive"] }
enum_dispatch = "0.3"
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
