[package]
name = "aave-flash-liquidation"
version = "0.1.0"
edition = "2021"

[dependencies]
artemis-core = { path = "../../artemis-core" }
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = "2.0"
futures = "0.3"
async-trait = "0.1"
enum_dispatch = "0.3"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
alloy-primitives = "0.7"
alloy-sol-types = "0.7"
anyhow = "1.0"

[lib]
name = "aave_flash_liquidation"
path = "src/lib.rs"
